force-app/main/default/objects/LLC_BI__Collateral_History__c/fields/LLC_BI__Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Appraisal_Date__c</fullName>
    <description>This field is manually populated. This field is a date field, used to specify the date at which an appraisal on the collateral had taken place.</description>
    <inlineHelpText>Historical Appraisal date that corresponds to the real estate value</inlineHelpText>
    <label>Appraisal Date</label>
    <type>Date</type>
</CustomField>