force-app/main/default/objects/LLC_BI__Collateral_History__c/fields/LLC_BI__Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is manually populated. This field is a currency field, used to specify the value of a piece of collateral.</description>
    <label>Collateral Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>