force-app/main/default/objects/LLC_BI__Collateral_History__c/fields/LLC_BI__Notes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Notes__c</fullName>
    <description>This field is optional and manually populated. This field is a free form text field used to add notes about the collateral history of a particular piece of collateral</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>